# eth-price-tracker

./: .env.example  .gitignore  ARCHITECTURE.md  CLI_IMPLEMENTATION.md  CONTRIBUTING.md  Cargo.toml  DASHBOARD_SETUP.md  GRACEFUL_SHUTDOWN.md  Makefile  README.md  README_SETUP.md  REORG_HANDLING.md  RPC_CONFIG_FIX.md  RUNNING.md  SECURITY.md  TESTING.md  USAGE.md  indexer.db-shm  indexer.db-wal  justfile  run.sh  test_data.sql  test_events.sql  test_shutdown.sh
.github/workflows/: ci.yml
migrations/: 20260215000001_initial_schema.sql
public/: index.html
src/: app_state.rs  cli.rs  config.rs  error.rs  events.rs  lib.rs  main.rs  pricing.rs  rpc.rs  state.rs
src/api/: docs.rs  extractors.rs  mod.rs  models.rs  server.rs
src/api/handlers/: events.rs  health.rs  mod.rs  pools.rs  price.rs  stats.rs  stream.rs
src/api/middleware/: error.rs  logging.rs  mod.rs  rate_limit.rs
src/db/: mod.rs  models.rs  repository.rs
src/observability/: mod.rs
src/reorg/: detector.rs  mod.rs
src/rpc/: http.rs  hybrid.rs  mod.rs  websocket.rs
tests/: anvil_setup.rs  price_accuracy.rs  reorg_detection.rs
