[package]
name = "eth-uniswap-alloy"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Gaveesh Jain"]
description = "Production-grade Ethereum event indexer for Uniswap V2 using Alloy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gaveesh89/eth-price-tracker"
homepage = "https://github.com/gaveesh89/eth-price-tracker"

# Strict linting configuration
[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

# Workspace-style dependency management
[workspace.dependencies]
# Alloy - Ethereum library (with WebSocket support via pubsub feature)
alloy = { version = "0.6", features = ["providers", "rpc-types", "sol-types", "contract", "pubsub"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
eyre = "0.6"

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",    # RUST_LOG environment variable support
    "json",          # JSON output for production
    "fmt",           # Human-readable console output
    "ansi",          # Colored output
    "local-time",    # Timestamps
] }
tracing-appender = "0.2"  # File rotation

# API server
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.4", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "trace", "fs"] }
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
governor = "0.6"

# Environment configuration
dotenvy = "0.15"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }
colored = "2"
chrono = { version = "0.4", features = ["serde"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }

# WebSocket streaming
futures-util = "0.3"

# Random number generation (for reconnection jitter)
rand = "0.8"

[dependencies]
# Use workspace dependencies
alloy = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
governor = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
chrono = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
futures-util = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
# For Anvil testing
alloy = { workspace = true, features = ["node-bindings"] }
# For temporary file testing
tempfile = "3.8"
